added image samples, and print every 2nd iteration at icp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -163,6 +163,8 @@ add_executable(pcl_gICP src/pcl_gICP.cpp)
 add_executable(pcl_ICP_normals src/pcl_ICP_normals.cpp)
 add_executable(pcl_initial_transformation src/pcl_initial_transformation.cpp)
 add_executable(preprocess_align_publish src/preprocess_align_publish.cpp)
+add_executable(pcl_vizualizer src/pcl_vizualizer.cpp)
+
 
 
 target_link_libraries(pcl_generator	${catkin_LIBRARIES}	
@@ -203,6 +205,11 @@ ${PCL_LIBRARIES})
 
 target_link_libraries(preprocess_align_publish ${catkin_LIBRARIES}	
 ${PCL_LIBRARIES})
+
+target_link_libraries(pcl_vizualizer ${catkin_LIBRARIES}	
+${PCL_LIBRARIES})
+
+
 
 
 ## Rename C++ executable without prefix
